[package]
name = "ebpf_http_trace_loader"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redbpf = { version = "1.3.0", features = ["load"] }
ebpf_http_trace = { path="../ebpf_http_trace" }
futures = "0.3.15"
tokio = { version = "*", features = ["rt-core", "macros", "signal"] }
